Make sure tooltips don't appear for the content under the popup when you bring up a context menu, since it causes all sorts of focus weirdness if you click on the tooltip (bug 155018).  r=blizzard, sr=dbaron.